tests/baselines/reference/parserErrantEqualsGreaterThanAfterFunction1.errors.txt
parserErrantEqualsGreaterThanAfterFunction1.ts(1,10): error TS7010: 'f', which lacks return-type annotation, implicitly has an 'any' return type.
parserErrantEqualsGreaterThanAfterFunction1.ts(1,14): error TS1144: '{' or ';' expected.


==== parserErrantEqualsGreaterThanAfterFunction1.ts (2 errors) ====
    function f() => 4;
             ~
!!! error TS7010: 'f', which lacks return-type annotation, implicitly has an 'any' return type.
                 ~~
!!! error TS1144: '{' or ';' expected.